--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 					<div class="header-body">
 						<div class="container">
 							<div class="row justify-content-center">
-								<div class="col-12 col-sm-10 col-md-8">
+								<div class="col-sm-10 col-md-8">
 									<div class="branding-inner">
 										<div class="branding-box">
 											<div class="branding-title">
@@ -112,7 +112,7 @@
 				<div class="section-top">
 					<div class="container">
 						<div class="row justify-content-center">
-							<div class="col-12 col-sm-10">
+							<div class="col-sm-10">
 								<div class="heading">
 
 									<div class="heading-top">
@@ -420,7 +420,7 @@
 
 					<div class="container">
 						<div class="row justify-content-center">
-							<div class="col-12 col-sm-10">
+							<div class="col-sm-10">
 								<div class="heading">
 
 									<div class="heading-top">
@@ -681,7 +681,7 @@
 
 					<div class="container">
 						<div class="row justify-content-center">
-							<div class="col-12 col-sm-10">
+							<div class="col-sm-10">
 								<div class="heading">
 
 									<div class="heading-top">
@@ -814,7 +814,7 @@
 
 					<div class="container">
 						<div class="row justify-content-center">
-							<div class="col-12 col-sm-10">
+							<div class="col-sm-10">
 								<div class="heading">
 
 									<div class="heading-top">
@@ -1150,7 +1150,7 @@
 
 					<div class="container">
 						<div class="row justify-content-center">
-							<div class="col-12 col-sm-10">
+							<div class="col-sm-10">
 								<div class="heading">
 
 									<div class="heading-top">
@@ -1363,7 +1363,7 @@
 
 					<div class="container">
 						<div class="row justify-content-center">
-							<div class="col-12 col-sm-10">
+							<div class="col-sm-10">
 								<div class="heading">
 
 									<div class="heading-top">
@@ -1528,7 +1528,7 @@
 				<div class="container">
 
 					<div class="row">
-						<div class="col-12">
+						<div class="inner">
 							<div class="footer-info">
 								<span class="copyright">© Copyright 2013 <a class="copyright-link" href="#">Smak</a>. All Rights Reserved.</span>
 							</div>
@@ -1536,7 +1536,7 @@
 					</div>
 
 					<div class="row">
-						<div class="col-12">
+						<div class="inner">
 							<div class="social-items">
 								<div class="social-item">
 									<a class="social-link" href="#">
@@ -1563,7 +1563,7 @@
 					</div>
 
 					<div class="row">
-						<div class="col-12">
+						<div class="inner">
 
 							<div class="button">
 								<a class="btn btn-primary rewind-arrow up-arrow" href="#home" role="button">
