--- a/index.html
+++ b/index.html
@@ -846,9 +846,9 @@
 					<div class="container">
 
 						<div class="row">
-							<div class="col-xl-12">
+							<div class="col-lg-12">
 								<ul class="nav nav-tabs nav-tabs-team" id="myTab" role="tablist">
-								  <li class="nav-item">
+								  <li class="nav-item tab-team">
 								    <div class="nav-link" id="one-tab" data-toggle="tab" href="#tab-one" role="tab" aria-controls="tab-one" aria-expanded="true">
 											<div class="nav-team-inner">
 												<div class="nav-tab-header">
@@ -867,7 +867,7 @@
 											</div>
 										</div>
 								  </li>
-								  <li class="nav-item">
+								  <li class="nav-item tab-team">
 								    <div class="nav-link" id="two-tab" data-toggle="tab" href="#tab-two" role="tab" aria-controls="tab-two">
 											<div class="nav-team-inner">
 												<div class="nav-tab-header">
@@ -886,7 +886,7 @@
 											</div>
 										</div>
 								  </li>
-								  <li class="nav-item">
+								  <li class="nav-item tab-team">
 								    <div class="nav-link" id="three-tab" data-toggle="tab" href="#tab-three" role="tab" aria-controls="tab-three">
 											<div class="nav-team-inner">
 												<div class="nav-tab-header">
@@ -905,7 +905,7 @@
 											</div>
 										</div>
 								  </li>
-								  <li class="nav-item">
+								  <li class="nav-item tab-team">
 								    <div class="nav-link" id="four-tab" data-toggle="tab" href="#tab-four" role="tab" aria-controls="tab-four">
 											<div class="nav-team-inner">
 												<div class="nav-tab-header">
@@ -929,8 +929,13 @@
 								<div class="tab-content tab-content-team" id="myTabContent">
 									<div class="tab-pane fade holder-team" id="tab-one" role="tabpanel" aria-labelledby="one-tab">
 										<div class="row justify-content-center">
-											<div class="col-8">
+											<div class="col-md-8">
 												<div class="nav-team-inner">
+													<div class="nav-team-closed">
+														<button type="button" class="close close-tab-panel" aria-label="Close" data-target="#tab-one" data-toggler>
+														  <span class="og-close inverse" aria-hidden="true"></span>
+														</button>
+													</div>
 													<div class="tab-team-header">
 														<div class="nav-tab-autor">
 															<p>John Doe</p>
@@ -963,8 +968,13 @@
 									</div>
 									<div class="tab-pane fade holder-team" id="tab-two" role="tabpanel" aria-labelledby="two-tab">
 										<div class="row justify-content-center">
-											<div class="col-8">
+											<div class="col-md-8">
 												<div class="nav-team-inner">
+													<div class="nav-team-closed">
+														<button type="button" class="close close-tab-panel" aria-label="Close" data-target="#tab-two" data-toggler>
+														  <span class="og-close inverse" aria-hidden="true"></span>
+														</button>
+													</div>
 													<div class="tab-team-header">
 														<div class="nav-tab-autor">
 															<p>John Doe</p>
@@ -997,8 +1007,13 @@
 									</div>
 									<div class="tab-pane fade holder-team" id="tab-three" role="tabpanel" aria-labelledby="three-tab">
 										<div class="row justify-content-center">
-											<div class="col-8">
+											<div class="col-md-8">
 												<div class="nav-team-inner">
+													<div class="nav-team-closed">
+														<button type="button" class="close close-tab-panel" aria-label="Close" data-target="#tab-three" data-toggler>
+														  <span class="og-close inverse" aria-hidden="true"></span>
+														</button>
+													</div>
 													<div class="tab-team-header">
 														<div class="nav-tab-autor">
 															<p>John Doe</p>
@@ -1031,8 +1046,13 @@
 									</div>
 									<div class="tab-pane fade holder-team" id="tab-four" role="tabpanel" aria-labelledby="four-tab">
 										<div class="row justify-content-center">
-											<div class="col-8">
+											<div class="col-md-8">
 												<div class="nav-team-inner">
+													<div class="nav-team-closed">
+														<button type="button" class="close close-tab-panel" aria-label="Close" data-target="#tab-four" data-toggler>
+														  <span class="og-close inverse" aria-hidden="true"></span>
+														</button>
+													</div>
 													<div class="tab-team-header">
 														<div class="nav-tab-autor">
 															<p>John Doe</p>
@@ -1588,6 +1608,7 @@
 	<script src="js/modernizr.custom.js"></script>
 	<script src="js/grid.js"></script>
 	<script src="js/circle-progress.js"></script>
+	<script src="js/jquery.responsiveTabs.js"></script>
 	<script src="js/script.js"></script>
 </body>
 
