--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 			<div class="section section-full-screen" id="home" name="home">
 
-				<div class="section-header">
+				<div class="section-header bg-dark-green">
 					<div class="header-block">
 						<div class="container">
 							<div class="row">
@@ -67,7 +67,7 @@
 					</div>
 				</div>
 
-				<div class="section-body">
+				<div class="section-body padding-zero">
 					<div class="header-body">
 						<div class="container">
 							<div class="row justify-content-center">
@@ -109,7 +109,7 @@
 
 			<div class="section" id="service" name="service">
 
-				<div class="section-top">
+				<div class="section-header">
 					<div class="container">
 						<div class="row justify-content-center">
 							<div class="col-sm-10">
@@ -144,7 +144,7 @@
 					</div>
 				</div>
 
-				<div class="section-bottom">
+				<div class="section-body">
 
 					<div class="container">
 						<div class="row">
@@ -248,9 +248,9 @@
 
 			</div>
 
-			<div class="section background-dark">
+			<div class="section bg-dark inverse">
 
-				<div class="section-top">
+				<div class="section-header">
 					<div class="container">
 						<div class="row justify-content-center">
 							<div class="col-sm-10">
@@ -259,7 +259,7 @@
 									<div class="heading-top">
 										<div class="heading-title">
 
-											<div class="heading-body brand-color">
+											<div class="heading-body">
 												<h2>How we do it</h2>
 											</div>
 
@@ -267,7 +267,7 @@
 									</div>
 
 									<div class="heading-bottom">
-										<div class="heading-description light-color">
+										<div class="heading-description">
 											<p>
 												Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Vivamus suscipit tortor eget felis porttitor volutpat.
 											</p>
@@ -280,12 +280,12 @@
 					</div>
 				</div>
 
-				<div class="section-bottom">
+				<div class="section-body">
 					<div class="container">
 						<div class="row">
 							<div class="cards">
 								<div class="col-6 col-md-4 col-xl-2">
-									<div class="card background-dark">
+									<div class="card">
 										<div class="card-header">
 											<div class="card-icon">
 												<svg class="icon-detail" xmlns="http://www.w3.org/2000/svg" width="42" height="45" viewBox="0 0 42 45">
@@ -295,9 +295,9 @@
 										</div>
 										<div class="card-bottom">
 											<div class="card-title">
-												<h3 class="light-color">Analyse</h3>
+												<h3>Analyse</h3>
 											</div>
-											<div class="card-description light-color">
+											<div class="card-description">
 												<p>
 													Vivamus suscipit tortor eget felis porttitor volutpat. Curabitur aliquet quam.
 												</p>
@@ -306,7 +306,7 @@
 									</div>
 								</div>
 								<div class="col-6 col-md-4 col-xl-2">
-									<div class="card background-dark">
+									<div class="card">
 										<div class="card-header">
 											<div class="card-icon">
 												<svg class="icon-detail" xmlns="http://www.w3.org/2000/svg" width="45" height="45" viewBox="0 0 45 45">
@@ -316,9 +316,9 @@
 										</div>
 										<div class="card-bottom">
 											<div class="card-title">
-												<h3 class="light-color">Preparing</h3>
+												<h3>Preparing</h3>
 											</div>
-											<div class="card-description light-color">
+											<div class="card-description">
 												<p>
 													Vivamus suscipit tortor eget felis porttitor volutpat. Curabitur aliquet quam id dui posuere blandit
 												</p>
@@ -327,7 +327,7 @@
 									</div>
 								</div>
 								<div class="col-6 col-md-4 col-xl-2">
-									<div class="card background-dark">
+									<div class="card">
 										<div class="card-header">
 											<div class="card-icon">
 												<svg class="icon-detail" xmlns="http://www.w3.org/2000/svg" width="45" height="42" viewBox="0 0 45 42">
@@ -337,16 +337,16 @@
 										</div>
 										<div class="card-bottom">
 											<div class="card-title">
-												<h3 class="light-color">Working</h3>
+												<h3>Working</h3>
 											</div>
-											<div class="card-description light-color">
+											<div class="card-description">
 												<p>Vivamus suscipit tortor eget felis porttitor volutpat.</p>
 											</div>
 										</div>
 									</div>
 								</div>
 								<div class="col-6 col-md-4 col-xl-2">
-									<div class="card background-dark">
+									<div class="card">
 										<div class="card-header">
 											<div class="card-icon">
 												<svg class="icon-detail" xmlns="http://www.w3.org/2000/svg" width="44" height="46" viewBox="0 0 44 46">
@@ -356,9 +356,9 @@
 										</div>
 										<div class="card-bottom">
 											<div class="card-title">
-												<h3 class="light-color">Finalyse</h3>
+												<h3>Finalyse</h3>
 											</div>
-											<div class="card-description light-color">
+											<div class="card-description">
 												<p>
 													Vivamus suscipit tortor eget felis porttitor volutpat. Curabitur aliquet quam id.
 												</p>
@@ -367,7 +367,7 @@
 									</div>
 								</div>
 								<div class="col-6 col-md-4 col-xl-2">
-									<div class="card background-dark">
+									<div class="card">
 										<div class="card-header">
 											<div class="card-icon">
 												<svg class="icon-detail" xmlns="http://www.w3.org/2000/svg" width="38.66" height="41.03" viewBox="0 0 38.66 41.03">
@@ -377,9 +377,9 @@
 										</div>
 										<div class="card-bottom">
 											<div class="card-title">
-												<h3 class="light-color">Testing</h3>
+												<h3>Testing</h3>
 											</div>
-											<div class="card-description light-color">
+											<div class="card-description">
 												<p>
 													Vivamus suscipit tortor eget felis porttitor volutpat. Curabitur aliquet quam id dui posuere blandit
 												</p>
@@ -388,7 +388,7 @@
 									</div>
 								</div>
 								<div class="col-6 col-md-4 col-xl-2">
-									<div class="card background-dark">
+									<div class="card">
 										<div class="card-header">
 											<div class="card-icon">
 												<svg class="icon-detail" xmlns="http://www.w3.org/2000/svg" width="46" height="37" viewBox="0 0 46 37">
@@ -398,9 +398,9 @@
 										</div>
 										<div class="card-bottom">
 											<div class="card-title">
-												<h3 class="light-color">Deliver</h3>
+												<h3>Deliver</h3>
 											</div>
-											<div class="card-description light-color">
+											<div class="card-description">
 												<p>
 													Vivamus suscipit tortor eget felis porttitor volutpat. Curest bitur.
 												</p>
@@ -416,7 +416,7 @@
 			</div>
 
 			<div class="section" id="works" name="works">
-				<div class="section-top">
+				<div class="section-header">
 
 					<div class="container">
 						<div class="row justify-content-center">
@@ -453,7 +453,7 @@
 
 				</div>
 
-				<div class="section-bottom">
+				<div class="section-body">
 
 					<div class="container">
 						<ul class="nav-tabs tabs-thumbnail">
@@ -554,7 +554,7 @@
 
 			<div class="section">
 
-				<div class="section-top">
+				<div class="section-header">
 					<div class="container">
 						<div class="heading">
 
@@ -580,7 +580,7 @@
 					</div>
 				</div>
 
-				<div class="section-bottom">
+				<div class="section-body">
 
 					<div class="button">
 						<a class="btn btn-primary btn-inverse" href="#service" role="button">Contact us</a>
@@ -590,9 +590,9 @@
 
 			</div>
 
-			<div class="section background-dark">
+			<div class="section bg-dark inverse">
 
-				<div class="section-top">
+				<div class="section-header">
 					<div class="container">
 						<div class="row justify-content-center">
 							<div class="col-sm-10">
@@ -601,7 +601,7 @@
 									<div class="heading-top">
 										<div class="heading-title">
 
-											<div class="heading-body light-color">
+											<div class="heading-body">
 												<h2>We are proud of these numbers</h2>
 											</div>
 
@@ -609,7 +609,7 @@
 									</div>
 
 									<div class="heading-bottom">
-										<div class="heading-description light-color">
+										<div class="heading-description">
 											<p>
 												Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Vivamus suscipit tortor eget felis porttitor volutpat. Curabitur aliquet quam id dui posuere.
 											</p>
@@ -622,15 +622,15 @@
 					</div>
 				</div>
 
-				<div class="section-bottom">
+				<div class="section-body">
 					<div class="container">
 						<div class="row">
 
 							<div class="cards">
 								<div class="col-sm-6 col-lg-3">
-									<div class="card card-meta background-dark">
+									<div class="card card-meta">
 										<div class="card-header">
-											<div class="circle-portfolio portfolio circle-clients"><strong class="head-circle">1600</strong></div>
+											<span class="counter portfolio">1600</span>
 										</div>
 										<div class="card-body">
 											<span class="text-description">Happy clients</span>
@@ -638,9 +638,9 @@
 									</div>
 								</div>
 								<div class="col-sm-6 col-lg-3">
-									<div class="card card-meta background-dark">
+									<div class="card card-meta">
 										<div class="card-header">
-											<div class="circle-portfolio portfolio circle-project"><strong class="head-circle">3200</strong></div>
+											<span class="counter portfolio">3200</span>
 										</div>
 										<div class="card-body">
 											<span class="text-description">Completed projects</span>
@@ -648,9 +648,9 @@
 									</div>
 								</div>
 								<div class="col-sm-6 col-lg-3">
-									<div class="card card-meta background-dark">
+									<div class="card card-meta">
 										<div class="card-header">
-											<div class="circle-portfolio portfolio circle-avards"><strong class="head-circle">40</strong></div>
+											<span class="counter portfolio">40</span>
 										</div>
 										<div class="card-body">
 											<span class="text-description">Awards</span>
@@ -658,9 +658,9 @@
 									</div>
 								</div>
 								<div class="col-sm-6 col-lg-3">
-									<div class="card card-meta background-dark">
+									<div class="card card-meta">
 										<div class="card-header">
-											<div class="circle-portfolio portfolio circle-coffee"><strong class="head-circle">20000</strong></div>
+											<span class="counter portfolio">20000</span>
 										</div>
 										<div class="card-body">
 											<span class="text-description">Coffee drinks</span>
@@ -677,7 +677,7 @@
 
 			<div class="section" id="about-us" name="about-us">
 
-				<div class="section-top">
+				<div class="section-header">
 
 					<div class="container">
 						<div class="row justify-content-center">
@@ -714,7 +714,7 @@
 
 				</div>
 
-				<div class="section-bottom">
+				<div class="section-body">
 					<div class="container">
 						<div class="row">
 							<div class="cards cards-inner">
@@ -810,7 +810,7 @@
 			</div>
 
 			<div class="section medium-bg padding-bottom-none">
-				<div class="section-top">
+				<div class="section-header">
 
 					<div class="container">
 						<div class="row justify-content-center">
@@ -842,7 +842,7 @@
 
 				</div>
 
-				<div class="section-bottom">
+				<div class="section-body">
 					<div class="container">
 
 						<div class="row">
@@ -926,7 +926,7 @@
 								  </li>
 								</ul>
 
-								<div class="tab-content tab-content-team" id="myTabContent">
+								<div class="tab-content tab-content-team bg-darken" id="myTabContent">
 									<div class="tab-pane fade holder-team" id="tab-one" role="tabpanel" aria-labelledby="one-tab">
 										<div class="row justify-content-center">
 											<div class="col-md-8">
@@ -1092,8 +1092,8 @@
 				</div>
 			</div>
 
-			<div class="section background-dark">
-				<div class="section-top">
+			<div class="section bg-dark inverse">
+				<div class="section-header">
 
 					<div class="container">
 						<div class="row justify-content-center">
@@ -1103,7 +1103,7 @@
 									<div class="heading-top">
 										<div class="heading-title">
 
-											<div class="heading-body light-color">
+											<div class="heading-body">
 												<h2>Skills</h2>
 											</div>
 
@@ -1111,7 +1111,7 @@
 									</div>
 
 									<div class="heading-bottom">
-										<div class="heading-description light-color">
+										<div class="heading-description">
 											<p>
 												Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Vivamus suscipit tortor eget felis porttitor volutpat. Curabitur aliquet quam id dui posuere.
 											</p>
@@ -1125,7 +1125,7 @@
 
 				</div>
 
-				<div class="section-bottom">
+				<div class="section-body">
 					<div class="container">
 						<div class="row">
 							<div class="col-sm-6 col-lg-3">
@@ -1166,7 +1166,7 @@
 			</div>
 
 			<div class="section" id="clients" name="clients">
-				<div class="section-top">
+				<div class="section-header">
 
 					<div class="container">
 						<div class="row justify-content-center">
@@ -1203,7 +1203,7 @@
 
 				</div>
 
-				<div class="section-bottom">
+				<div class="section-body">
 
 					<div class="container">
 						<div class="row">
@@ -1297,7 +1297,7 @@
 				</div>
 			</div>
 
-			<div class="section background-dark">
+			<div class="section bg-dark inverse">
 				<div class="section">
 					<div class="container">
 						<div id="carouselExampleIndicators" class="carousel slide carousel-quote" data-ride="carousel">
@@ -1379,7 +1379,7 @@
 			</div>
 
 			<div class="section" id="contacts" name="contacts">
-				<div class="section-top">
+				<div class="section-header">
 
 					<div class="container">
 						<div class="row justify-content-center">
@@ -1415,7 +1415,7 @@
 					</div>
 				</div>
 
-				<div class="section-bottom">
+				<div class="section-body">
 					<div class="container">
 						<div class="cards cards-contacts">
 							<div class="card">
@@ -1475,8 +1475,8 @@
 
 			</div>
 
-			<div class="section background-dark">
-				<div class="section-top">
+			<div class="section bg-dark inverse">
+				<div class="section-header">
 
 					<div class="container">
 						<div class="row justify-content-center">
@@ -1486,7 +1486,7 @@
 									<div class="heading-top">
 										<div class="heading-title">
 
-											<div class="heading-body light-color">
+											<div class="heading-body">
 												<h2>Send us a message</h2>
 											</div>
 
@@ -1494,7 +1494,7 @@
 									</div>
 
 									<div class="heading-bottom">
-										<div class="heading-description light-color">
+										<div class="heading-description">
 											<p>
 												Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Vivamus suscipit tortor eget felis porttitor volutpat. Curabitur aliquet quam id dui posuere.
 											</p>
@@ -1508,7 +1508,7 @@
 
 				</div>
 
-				<div class="section-bottom">
+				<div class="section-body">
 					<div class="container">
 						<form>
 							<div class="form-row">
@@ -1544,7 +1544,7 @@
 
 		<footer class="footer-page">
 
-			<div class="section section-footer-page">
+			<div class="section section-footer-page inverse">
 				<div class="container">
 
 					<div class="row">
@@ -1604,11 +1604,13 @@
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
+	<script src="http://cdnjs.cloudflare.com/ajax/libs/waypoints/2.0.3/waypoints.min.js"></script>
 	<script src="js/bootstrap.js"></script>
 	<script src="js/modernizr.custom.js"></script>
 	<script src="js/grid.js"></script>
 	<script src="js/circle-progress.js"></script>
 	<script src="js/jquery.responsiveTabs.js"></script>
+	<script src="js/jquery.counterup.min.js"></script>
 	<script src="js/script.js"></script>
 </body>
 
